updated stk transaction id to uint64
