# pkg/api/stk/v1/stk.v1.pb.go
@@ -663,7 +663,7 @@ type GetStkTransactionRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	TransactionId  string `protobuf:"bytes,1,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
+	TransactionId  uint64 `protobuf:"varint,1,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
 	MpesaReceiptId string `protobuf:"bytes,2,opt,name=mpesa_receipt_id,json=mpesaReceiptId,proto3" json:"mpesa_receipt_id,omitempty"`
 }
 
@@ -699,11 +699,11 @@ func (*GetStkTransactionRequest) Descriptor() ([]byte, []int) {
 	return file_stk_v1_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *GetStkTransactionRequest) GetTransactionId() string {
+func (x *GetStkTransactionRequest) GetTransactionId() uint64 {
 	if x != nil {
 		return x.TransactionId
 	}
-	return ""
+	return 0
 }
 
 func (x *GetStkTransactionRequest) GetMpesaReceiptId() string {
@@ -1018,7 +1018,7 @@ type ProcessStkTransactionRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	TransactionId  string `protobuf:"bytes,1,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
+	TransactionId  uint64 `protobuf:"varint,1,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
 	MpesaReceiptId string `protobuf:"bytes,2,opt,name=mpesa_receipt_id,json=mpesaReceiptId,proto3" json:"mpesa_receipt_id,omitempty"`
 	Processed      bool   `protobuf:"varint,3,opt,name=processed,proto3" json:"processed,omitempty"`
 }
@@ -1055,11 +1055,11 @@ func (*ProcessStkTransactionRequest) Descriptor() ([]byte, []int) {
 	return file_stk_v1_proto_rawDescGZIP(), []int{9}
 }
 
-func (x *ProcessStkTransactionRequest) GetTransactionId() string {
+func (x *ProcessStkTransactionRequest) GetTransactionId() uint64 {
 	if x != nil {
 		return x.TransactionId
 	}
-	return ""
+	return 0
 }
 
 func (x *ProcessStkTransactionRequest) GetMpesaReceiptId() string {
@@ -1136,8 +1136,8 @@ type PublishMessage struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	InitiatorId     string          `protobuf:"bytes,1,opt,name=initiator_id,json=initiatorId,proto3" json:"initiator_id,omitempty"`
-	TransactionId   string          `protobuf:"bytes,2,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
+	TransactionId   uint64          `protobuf:"varint,1,opt,name=transaction_id,json=transactionId,proto3" json:"transaction_id,omitempty"`
+	InitiatorId     string          `protobuf:"bytes,2,opt,name=initiator_id,json=initiatorId,proto3" json:"initiator_id,omitempty"`
 	MpesaReceiptId  string          `protobuf:"bytes,3,opt,name=mpesa_receipt_id,json=mpesaReceiptId,proto3" json:"mpesa_receipt_id,omitempty"`
 	PhoneNumber     string          `protobuf:"bytes,4,opt,name=phone_number,json=phoneNumber,proto3" json:"phone_number,omitempty"`
 	PublishInfo     *PublishInfo    `protobuf:"bytes,5,opt,name=publish_info,json=publishInfo,proto3" json:"publish_info,omitempty"`
@@ -1176,16 +1176,16 @@ func (*PublishMessage) Descriptor() ([]byte, []int) {
 	return file_stk_v1_proto_rawDescGZIP(), []int{11}
 }
 
+func (x *PublishMessage) GetTransactionId() uint64 {
+	if x != nil {
+		return x.TransactionId
+	}
+	return 0
+}
+
 func (x *PublishMessage) GetInitiatorId() string {
 	if x != nil {
 		return x.InitiatorId
-	}
-	return ""
-}
-
-func (x *PublishMessage) GetTransactionId() string {
-	if x != nil {
-		return x.TransactionId
 	}
 	return ""
 }
@@ -1363,7 +1363,7 @@ var file_stk_v1_proto_rawDesc = []byte{
 	0x6e, 0x67, 0x20, 0x53, 0x54, 0x4b, 0x20, 0x70, 0x75, 0x73, 0x68, 0x22, 0xc2, 0x01, 0x0a, 0x18,
 	0x47, 0x65, 0x74, 0x53, 0x74, 0x6b, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
 	0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x25, 0x0a, 0x0e, 0x74, 0x72, 0x61, 0x6e,
-	0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09,
+	0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04,
 	0x52, 0x0d, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x49, 0x64, 0x12,
 	0x28, 0x0a, 0x10, 0x6d, 0x70, 0x65, 0x73, 0x61, 0x5f, 0x72, 0x65, 0x63, 0x65, 0x69, 0x70, 0x74,
 	0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x6d, 0x70, 0x65, 0x73, 0x61,
@@ -1461,7 +1461,7 @@ var file_stk_v1_proto_rawDesc = []byte{
 	0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x53, 0x74, 0x6b, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x61,
 	0x63, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x25, 0x0a, 0x0e,
 	0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
+	0x20, 0x01, 0x28, 0x04, 0x52, 0x0d, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
 	0x6e, 0x49, 0x64, 0x12, 0x28, 0x0a, 0x10, 0x6d, 0x70, 0x65, 0x73, 0x61, 0x5f, 0x72, 0x65, 0x63,
 	0x65, 0x69, 0x70, 0x74, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x6d,
 	0x70, 0x65, 0x73, 0x61, 0x52, 0x65, 0x63, 0x65, 0x69, 0x70, 0x74, 0x49, 0x64, 0x12, 0x1c, 0x0a,
@@ -1489,11 +1489,11 @@ var file_stk_v1_proto_rawDesc = []byte{
 	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x20, 0x74, 0x6f, 0x20, 0x70, 0x75, 0x62, 0x6c, 0x69,
 	0x73, 0x68, 0x20, 0x61, 0x20, 0x73, 0x74, 0x6b, 0x20, 0x70, 0x75, 0x73, 0x68, 0x20, 0x70, 0x61,
 	0x79, 0x6c, 0x6f, 0x61, 0x64, 0x22, 0xef, 0x02, 0x0a, 0x0e, 0x50, 0x75, 0x62, 0x6c, 0x69, 0x73,
-	0x68, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x21, 0x0a, 0x0c, 0x69, 0x6e, 0x69, 0x74,
-	0x69, 0x61, 0x74, 0x6f, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b,
-	0x69, 0x6e, 0x69, 0x74, 0x69, 0x61, 0x74, 0x6f, 0x72, 0x49, 0x64, 0x12, 0x25, 0x0a, 0x0e, 0x74,
-	0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x0d, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e,
+	0x68, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x25, 0x0a, 0x0e, 0x74, 0x72, 0x61, 0x6e,
+	0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04,
+	0x52, 0x0d, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x49, 0x64, 0x12,
+	0x21, 0x0a, 0x0c, 0x69, 0x6e, 0x69, 0x74, 0x69, 0x61, 0x74, 0x6f, 0x72, 0x5f, 0x69, 0x64, 0x18,
+	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x69, 0x6e, 0x69, 0x74, 0x69, 0x61, 0x74, 0x6f, 0x72,
 	0x49, 0x64, 0x12, 0x28, 0x0a, 0x10, 0x6d, 0x70, 0x65, 0x73, 0x61, 0x5f, 0x72, 0x65, 0x63, 0x65,
 	0x69, 0x70, 0x74, 0x5f, 0x69, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x6d, 0x70,
 	0x65, 0x73, 0x61, 0x52, 0x65, 0x63, 0x65, 0x69, 0x70, 0x74, 0x49, 0x64, 0x12, 0x21, 0x0a, 0x0c,
